// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color renders 0 1`] = `
Array [
  .c0 {
  color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`color renders function 1`] = `
Array [
  .c0 {
  color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  color: has;
}

<div
    className="c0"
  />,
  .c0 {
  color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`color renders invalid theme path 1`] = `
Array [
  .c0 {
  color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`color renders negative number 1`] = `
Array [
  .c0 {
  color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`color renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`color renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    color: July;
  }
}

@media April {
  .c0 {
    color: August;
  }
}

@media January {
  .c0 {
    color: September;
  }
}

@media April {
  .c0 {
    color: November;
  }
}

@media June {
  .c0 {
    color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    color: July;
  }
}

@media April {
  .c0 {
    color: August;
  }
}

@media January {
  .c0 {
    color: September;
  }
}

@media April {
  .c0 {
    color: November;
  }
}

@media June {
  .c0 {
    color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    color: January;
  }
}

@media April {
  .c0 {
    color: December;
  }
}

@media January {
  .c0 {
    color: April;
  }
}

@media April {
  .c0 {
    color: May;
  }
}

@media June {
  .c0 {
    color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    color: January;
  }
}

@media April {
  .c0 {
    color: December;
  }
}

@media January {
  .c0 {
    color: April;
  }
}

@media April {
  .c0 {
    color: May;
  }
}

@media June {
  .c0 {
    color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`color renders postitive number 1`] = `
Array [
  .c0 {
  color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`color renders string 1`] = `
Array [
  .c0 {
  color: July;
}

<div
    className="c0"
  />,
  .c0 {
  color: July;
}

<div
    className="c0"
  />,
  .c0 {
  color: June;
}

<div
    className="c0"
  />,
  .c0 {
  color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`color renders valid theme path 1`] = `
Array [
  .c0 {
  color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
